--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.3"
+  },
+  "devDependencies": {
+    "serverless-offline": "^8.5.0"
   }
 }
