--- a/serverless.yml
+++ b/serverless.yml
@@ -1,6 +1,7 @@
 service: aws-lambda
 
-frameworkVersion: '3'
+plugins:
+  - serverless-offline
 
 provider:
   name: aws
@@ -14,5 +15,14 @@ functions:
       - http:
           path: /hello
           method: get
+          cors: true
+          credentials: true
+  
+  goodbye:
+    handler: handler.goodbye
+    events:
+      - http:
+          path: /goodbye
+          method: post
           cors: true
           credentials: true
